<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    android:fontFamily="sans-serif"
    tools:context="com.xyzmanillas.manillasxyz.Principal">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="15sp" />

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:text="@string/quantity_label"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:ems="10"
        android:hint="@string/quantity_label"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/materialTypeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/material_type_label"
        android:textSize="16sp"
        android:layout_marginBottom="4sp" />

    <Spinner
        android:id="@+id/materialsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp" />

    <TextView
        android:id="@+id/pendantTypeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:text="@string/pendant_type_label"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/pendantsSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp" />

    <TextView
        android:id="@+id/metalTypeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:text="@string/metal_type_label"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/metalTypesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp" />

    <TextView
        android:id="@+id/currencyTypeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4sp"
        android:text="@string/currency_type_label"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/currencyTypesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10sp" >

        <Button
            android:id="@+id/calculateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculate"
            android:text="@string/calculate" />

        <Button
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clear"
            android:text="@string/clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/result" />

</LinearLayout>
